before pulling
